# operations-debs-contenttranslation-apertium-pt-gl

./: AUTHORS  ChangeLog  Makefile.am  README  apertium-pt-gl.gl-pt.t1x  apertium-pt-gl.gl.dix  apertium-pt-gl.post-gl.dix  apertium-pt-gl.pt-gl.dix  apertium-pt-gl.pt-gl.t1x  apertium-pt-gl.pt.dix  apertium-pt-gl_0.9.2~r57551.orig.tar.gz.delta  apertium-pt-gl_0.9.2~r57551.orig.tar.gz.id  apertium-pt-gl_0.9.2~r60358.orig.tar.gz.delta  apertium-pt-gl_0.9.2~r60358.orig.tar.gz.id  configure.ac  modes.xml  pt-gl-latin1.prob
debian/: changelog  control  copyright
